<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundclr"
    android:backgroundTint="@color/backgroundclr"
    tools:context=".Onboard2">


    <Button
        android:id="@+id/next"
        android:layout_width="238dp"
        android:layout_height="56dp"
        android:layout_marginTop="129dp"
        android:layout_marginBottom="37dp"
        android:background="@drawable/rounded_button"
        android:text="@string/next"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="346dp"
        android:layout_height="429dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="129dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/onboard2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="329dp"
        android:layout_height="61dp"
        android:text="@string/hit_your_goals_with_smart_budgets"
        android:textAlignment="center"
        android:textColor="@color/text_primary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="277dp"
        android:layout_height="57dp"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="182dp"
        android:text="@string/set_limits_get_alerts_and_save_more_effortlessly"
        android:textAlignment="center"
        android:textColor="@color/text_secondary"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.189" />
</androidx.constraintlayout.widget.ConstraintLayout>